# viper-simplifier

./: Cargo.toml  README.md  build.rs
src/: ast_helpers.rs  main.rs  queries.rs  query_expr.rs  refactors.rs  replacement.rs  string_substitutions.rs  tree_sitter_viper.rs
