[package]
name = "viper-simplifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="*"

[dependencies]
regex = "1"
tree-sitter = "0.20.10"
# tree-sitter =  { path = "../tree-sitter/lib" }
tree-sitter-rust = "0.20.3"
